--- a/includes/gbt-blocks/portfolio/scss/editor.scss
+++ b/includes/gbt-blocks/portfolio/scss/editor.scss
@@ -7,8 +7,8 @@
 	}
 }
 
-.editor-block-list__block[data-type="getbowtied/portfolio"][data-align="wide"],
-.editor-block-list__block[data-type="getbowtied/portfolio"][data-align="full"]
+.editor-block-list__block[data-type="getbowtied/mt-portfolio"][data-align="wide"],
+.editor-block-list__block[data-type="getbowtied/mt-portfolio"][data-align="full"]
 {
 	.portfolio-preview
 	{
