--- a/includes/gbt-blocks/latest_posts_slider/scss/editor.scss
+++ b/includes/gbt-blocks/latest_posts_slider/scss/editor.scss
@@ -1,283 +1,237 @@
-.wp-block-gbt-posts-grid
+.editor-block-list__block[data-type="getbowtied/mt-latest-posts-slider"]:not(.is-selected):not(.is-hovered)
 {
-	.latest_posts_grid_wrapper
+	.editor-block-list__block-edit
 	{
+		border: 1px solid rgba(204, 204, 204, 0.45);
+	}
+}
+
+.editor-block-list__block[data-type="getbowtied/mt-latest-posts-slider"][data-align="wide"],
+.editor-block-list__block[data-type="getbowtied/mt-latest-posts-slider"][data-align="full"]
+{
+	.wp-block-gbt-posts-slider
+	{
+		.from_the_blog_img_link
+		{
+			height: 245px !important;
+		}
+	}
+}
+
+.editor-block-list__block[data-type="getbowtied/mt-latest-posts-slider"][data-align="center"]
+{
+	.wp-block-gbt-posts-slider
+	{
+		.from_the_blog_item h3
+		{
+			font-size: 1.2em;
+		    margin: 0 0 5px;
+		}
+
+		.from_the_blog_item .post_header_date {
+		    font-size: 0.8em;
+		}
+	}
+}
+
+.wp-block-slider-title-wrapper
+{
+	background-color: #f3f3f3;
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1.7em 1em 1em;
+    min-height: 70px;
+    height: 70px;
+    width: 100%;
+    text-align: center;
+    font-size: 13px;
+    border-bottom: 1px solid #e6e6e6;
+
+    &:hover
+    {
+    	cursor: pointer;
+    }
+
+    .dashicon.dashicons-slides
+	{
+	    margin-right: 1ch;
+	    margin-top: -10px;
+	}
+
+	.wp-block-slider-title
+	{
+		font-family: BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif !important;
+	    display: flex;
+	    justify-content: center;
+	    font-weight: 600;
+	    margin-bottom: 0;
+	    margin-top: 3px;
+	    margin-left: -3px;
+	}
+
+	.dashicon.dashicons-slides:before
+	{
+		font-family: "dashicons";
+	    font-size: 26px;
+	}
+}
+
+.wp-block-gbt-posts-slider
+{
+
+	.owl-carousel
+	{
+		width: 100%;
+	}
+
+	.from-the-blog-wrapper {
+		margin: 30px 0px 0px 0px;
+	}
+
+	.from_the_blog_item {
+		padding: 0 15px;	
+		width: 33%;
+    	display: inline-block;
+	    vertical-align: top;
+	    cursor: pointer;
+	}
+
+	.from_the_blog_item h3 {
+		text-align: center;
+		font-size: 1.457em;
+		line-height: 1.304em;
+		margin: 0 0 12px;
+	}
+
+	.from_the_blog_item .post_header_date {
+		text-align: center;
+		font-size: 0.875em;
+	}
+
+	.from_the_blog_item.gallery {
+		margin: 0 !important;
+	}
+
+	.from_the_blog_overlay
+	{
+		display: block;
+		background: rgba(0,0,0,0);
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		z-index: 2;
+		-webkit-transition: all .3s ease;
+		-moz-transition: all .3s ease;
+		-o-transition: all .3s ease;
+		-ms-transition: all .3s ease;
+	}
+
+	.from_the_blog_item:hover .from_the_blog_overlay
+	{
+		background: rgba(0,0,0,0.6);
+	}
+
+	.from_the_blog_img_link
+	{
+		display: block;
+		overflow: hidden;
 		position: relative;
-	  	overflow: hidden;
+		height: 130px;
+		width: 100%;
+		margin-bottom: 18px;
+		
+		-webkit-mask-image: -webkit-radial-gradient(white, black);
+	}	
 
-		&.columns-1
-		{
-			.latest_posts_grid_item
-			{
-				width: 100%;
-			}
-		}
+	.from_the_blog_img
+	{
+		display: block;
+		width: 100%;
+		height: 100%;
+		background-position: center center;
+		background-size: cover;		
+		transition: all 1s ease;
+	}
 
-		&.columns-2
-		{
-			.latest_posts_grid_item
-			{
-				width: 50%;
-				float: left;
+	.from_the_blog_item:hover .from_the_blog_img
+	{
+		transform: translateZ(0) scale(1.1,1.1);
+		-moz-transform: translateZ(0) scale(1.1,1.1);
+		-webkit-transform: translateZ(0) scale(1.1,1.1);
+		-ms-transform: none;
+	}
 
-				&:nth-child(2n+1)
-				{
-					clear: both;
-				}
-			}
-		}
+	.grabbing .from_the_blog_item:hover .from_the_blog_img
+	{
+		transform: none;
+		-moz-transform: none;
+		-webkit-transform: none;
+		-ms-transform: none;
+	}
 
-		&.columns-3
-		{
-			.latest_posts_grid_item
-			{
-				width: 33.333333%;
-				float: left;
+	.from_the_blog_title
+	{
+		color: #000;
+	}
 
-				&:nth-child(3n+1)
-				{
-					clear: both;
-				}
-			}
-		}
+	.from_the_blog_noimg
+	{
+		background: #f5f5f5;
+		height: 245px;
+		width: 100%;
+		display: block;
+	}
 
-		&.columns-4
-		{
-			.latest_posts_grid_item
-			{
-				width: 25%;
-				float: left;
+	.owl-controls .owl-page
+	{
+	    display: inline-block;
+	    zoom: 1;
+	}
 
-				&:nth-child(4n+1)
-				{
-					clear: both;
-				}
-			}
-		}
+	.owl-controls .owl-page,
+	.owl-controls .owl-buttons div
+	{
+	    cursor: pointer;
+	}
 
-		&.columns-2
-		{
-			.latest_posts_grid_item
-			{
+	.owl-controls .owl-page span
+	{
+	    display: block;
+	    width: 8px;
+	    height: 8px;
+	    margin: 10px 3px;
+	    opacity: 0.99;
+	    border-radius: 20px;
+	    background: #a9a9ab;
+	}
 
-				@media all and (min-width: 640px) {
+	.post_header_date
+	{
+		color: rgba(122,122,122,0.45);
+	}
 
-					&:nth-child(odd)
-					{
-						padding-left: 0;
-					}
+	.owl-pagination
+	{
+		text-align: center;
+	}
 
-					&:nth-child(even)
-					{
-						padding-right: 0;
-					}
-				}
+	.owl-controls
+	{
+	    margin-top: 20px;
+	}
 
-				@media all and (max-width: 639px)
-				{
-					padding: 0 0;
-				}
-			}
-		}
+	.owl-controls .owl-page.active span,
+	.owl-controls.clickable .owl-page:hover span
+	{
+	    opacity: 0.55;
+	}
 
-		&.columns-3
-		{
-			.latest_posts_grid_item
-			{
-				@media all and (min-width: 1024px) {
-
-					&:nth-child(3n+1)
-					{
-						padding-left: 0;
-					}
-
-					&:nth-child(3n+3)
-					{
-						padding-right: 0;
-					}
-				}
-
-				@media all and (min-width: 640px) and (max-width: 1023px) {
-
-					&:nth-child(odd)
-					{
-						padding-left: 0;
-					}
-
-					&:nth-child(even)
-					{
-						padding-right: 0;
-					}
-				}
-
-				@media all and (max-width: 639px)
-				{
-					padding: 0 0;
-				}
-			}
-		}
-
-		&.columns-4
-		{
-			.latest_posts_grid_item
-			{
-				@media all and (min-width: 1240px) {
-
-					&:nth-child(4n+1)
-					{
-						padding-left: 0;
-					}
-
-					&:nth-child(4n+4)
-					{
-						padding-right: 0;
-					}
-				}
-
-				@media all and (min-width: 1024px) and (max-width: 1239px) {
-
-					&:nth-child(3n+1)
-					{
-						padding-left: 0;
-					}
-
-					&:nth-child(3n+3)
-					{
-						padding-right: 0;
-					}
-				}
-
-				@media all and (min-width: 640px) and (max-width: 1023px) {
-
-					&:nth-child(odd)
-					{
-						padding-left: 0;
-					}
-
-					&:nth-child(even)
-					{
-						padding-right: 0;
-					}
-				}
-
-				@media all and (max-width: 639px)
-				{
-					padding: 0 0;
-				}
-			}
-		}
-
-		.latest_posts_grid_item {
-			padding: 0 15px;	
-		    margin-bottom: 1rem;
-		}
-
-		.latest_posts_grid_title {
-			display: block;
-			font-weight: 900;
-			text-align: left;
-			font-size: 18px;
-			line-height: 1.1333em;
-			color: #000;
-			margin: 0 0 15px;
-		    transition: all .5s;
-
-			&:hover
-			{
-			    opacity: .4;
-		        transition: all .5s;
-		        cursor: pointer;
-			}
-		}
-
-		.latest_posts_grid_item.gallery {
-			margin: 0 !important;
-		}
-
-		.latest_posts_grid_overlay
-		{
-			display: block;
-			position: absolute;
-			width: 100%;
-			height: 100%;
-			z-index: 2;
-			opacity: 0;
-			transition: all .35s ease;
-		    background: rgba(255, 255, 255, 0.6);
-		}
-
-		.latest_posts_grid_img_container:hover .latest_posts_grid_overlay
-		{
-			opacity: 1;
-			cursor: pointer;
-		}
-
-		.latest_posts_grid_img_container
-		{
-			display: block;
-			overflow: hidden;
-			position: relative;
-			height: 150px;
-			width: 100%;
-			margin-bottom: 15px;
-			
-			-webkit-mask-image: -webkit-radial-gradient(white, black);
-		}	
-
-		.latest_posts_grid_img
-		{
-			display: block;
-			position: absolute;
-			width: 100%;
-			height: 100%;
-			background-position: center center;
-			background-size:cover;		
-			width: -webkit-calc(100% + 50px);
-			width: calc(100% + 50px);
-			max-width: none;
-			transition: opacity 0.35s, transform 0.35s;
-		}
-
-		.with_thumb_icon {
-			position: absolute;
-			width:50px;
-			height: 50px;
-			display: block;
-			top: 0;
-			left: 0;
-			text-align: center;
-			color: #fff;
-			line-height: 50px;
-			z-index: 3;
-		}
-
-		.no_thumb_icon {
-			line-height: 245px;
-			text-align: center;
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			color: #fff;
-			z-index: 3;
-		}
-
-		.latest_posts_grid_item.standard .with_thumb_icon {
-			display: none;
-		}
-
-		.no_thumb .latest_posts_grid_img
-		{
-			line-height: 245px;
-		}
-
-		.latest_posts_grid_noimg
-		{
-			background: #f5f5f5;
-			height: 245px;
-			width: 100%;
-			display: block;
-		}
+	.owl-controls .owl-page.active span,
+	.owl-controls.clickable .owl-page:hover span
+	{
+		opacity: 1;
+	    background: #d4d4d4;
 	}
 }
