--- a/includes/gbt-blocks/banner/css/style.css
+++ b/includes/gbt-blocks/banner/css/style.css
@@ -1,1 +1,39 @@
-.wp-block-gbt-banner{margin-bottom:2.5rem}.wp-block-gbt-banner .shortcode_banner_simple_height{cursor:pointer;margin-bottom:30px;clear:both;position:relative}.wp-block-gbt-banner .shortcode_banner_simple_height.full{width:100vw;margin-left:50%;-webkit-transform:translateX(-50%);-ms-transform:translateX(-50%);transform:translateX(-50%)}@media (min-width:1024px){.wp-block-gbt-banner .shortcode_banner_simple_height.wide{width:75vw;margin-left:50%;-webkit-transform:translateX(-50%);-ms-transform:translateX(-50%);transform:translateX(-50%)}}
+.wp-block-gbt-banner {
+  margin-bottom: 2.5rem; }
+  .wp-block-gbt-banner .shortcode_banner_simple_height {
+    cursor: pointer;
+    margin-bottom: 30px;
+    clear: both;
+    position: relative; }
+    .wp-block-gbt-banner .shortcode_banner_simple_height.full {
+      width: 100vw;
+      margin-left: 50%;
+      -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+      transform: translateX(-50%); }
+    @media all and (min-width: 1024px) {
+      .single-post .wp-block-gbt-banner .shortcode_banner_simple_height.wide {
+        width: 75vw;
+        margin-left: 50% !important;
+        -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        transform: translateX(-50%); } }
+    @media all and (max-width: 680px) {
+      .single-post .wp-block-gbt-banner .shortcode_banner_simple_height.wide {
+        width: 100%;
+        margin-left: 0 !important;
+        left: 0; } }
+    @media all and (min-width: 1518px) {
+      .wp-block-gbt-banner .shortcode_banner_simple_height.wide .page {
+        width: 75vw;
+        position: relative;
+        margin-left: -37.5vw !important;
+        left: 50%;
+        -webkit-transform: translateX(0);
+        -ms-transform: translateX(0);
+        transform: translateX(0); } }
+    @media all and (max-width: 680px) {
+      .wp-block-gbt-banner .shortcode_banner_simple_height.wide .page {
+        width: 100%;
+        margin-left: 0 !important;
+        left: 0; } }
