--- a/includes/gbt-blocks/banner/css/style.css
+++ b/includes/gbt-blocks/banner/css/style.css
@@ -24,7 +24,7 @@
         margin-left: 0 !important;
         left: 0; } }
     @media all and (min-width: 1518px) {
-      .wp-block-gbt-banner .shortcode_banner_simple_height.wide .page {
+      .page .wp-block-gbt-banner .shortcode_banner_simple_height.wide {
         width: 75vw;
         position: relative;
         margin-left: -37.5vw !important;
@@ -33,7 +33,7 @@
         -ms-transform: translateX(0);
         transform: translateX(0); } }
     @media all and (max-width: 680px) {
-      .wp-block-gbt-banner .shortcode_banner_simple_height.wide .page {
+      .page .wp-block-gbt-banner .shortcode_banner_simple_height.wide {
         width: 100%;
         margin-left: 0 !important;
         left: 0; } }
