--- a/includes/gbt-blocks/lookbook/scss/style.scss
+++ b/includes/gbt-blocks/lookbook/scss/style.scss
@@ -7,10 +7,209 @@
 		width: 100vw;
 		margin-left: 50%;
 		transform: translateX(-50%);
+
+		.lookbook-title
+		{
+			@media all and (min-width: 1024px) {
+				font-size: 100px;
+				width: 90%;
+				margin: auto;
+			}
+
+			@media all and (min-width: 481px) and (max-width: 1023px) {
+				font-size: 42px;
+				width: 90%;
+				margin: auto;
+			}
+
+			@media all and (max-width: 480px) {
+				width: 80%;
+			    line-height: 1.3;
+			    margin: auto;
+		        padding: 0 0 15px 0;
+			}
+		}
+
+		.lookbook-subtitle
+		{
+			@media all and (min-width: 1024px) {
+				width: 90%;
+				margin: auto;
+			}
+
+			@media all and (min-width: 481px) and (max-width: 1023px) {
+				width: 90%;
+				margin: auto;
+			}
+
+			@media all and (max-width: 480px) {
+				width: 80%;
+			    line-height: 1.3;
+			    margin: auto;
+		        padding: 0 0 15px 0;
+			}
+		}
+
+		.swiper-slide:not(.first)
+		{
+			@media all and (max-width: 679px) {
+				width: 100% !important;
+			}
+		}
+
+		.swiper-slide.first
+		{
+			width: 100% !important;
+		}
+	}
+
+	&.center
+	{
+		.lookbook-title
+		{
+			@media all and (min-width: 1024px) {
+				font-size: 80px;
+				width: 90%;
+				margin: auto;
+			}
+
+			@media all and (min-width: 481px) and (max-width: 1023px) {
+				font-size: 42px;
+				width: 90%;
+				margin: auto;
+			}
+
+			@media all and (max-width: 480px) {
+				width: 80%;
+			    line-height: 1.3;
+			    margin: auto;
+		        padding: 0 0 15px 0;
+			}
+		}
+
+		.lookbook-subtitle
+		{
+			@media all and (min-width: 1024px) {
+				width: 90%;
+				margin: auto;
+			}
+
+			@media all and (min-width: 481px) and (max-width: 1023px) {
+				width: 90%;
+				margin: auto;
+			}
+
+			@media all and (max-width: 480px) {
+				width: 80%;
+			    line-height: 1.3;
+			    margin: auto;
+		        padding: 0 0 15px 0;
+			}
+		}
+
+		.lookbook-subtitle
+		{
+			font-size: 30px;
+		}
+
+		.swiper-slide:not(.first)
+		{
+			@media all and (min-width: 1024px) {
+				&.column-3
+				{
+					width: 33.3333% !important;
+				}
+
+				&.column-2
+				{
+					width: 50% !important;
+				}
+
+				@media all and (max-width: 679px) {
+					width: 100% !important;
+				}
+			}
+		}
+
+		.swiper-slide.first
+		{
+			width: 100% !important;
+		}
 	}
 
 	&.wide
 	{
+		.lookbook-title
+		{
+			@media all and (min-width: 1024px) {
+				font-size: 80px;
+				width: 90%;
+				margin: auto;
+			}
+
+			@media all and (min-width: 481px) and (max-width: 1023px) {
+				font-size: 42px;
+				width: 90%;
+				margin: auto;
+			}
+
+			@media all and (max-width: 480px) {
+				width: 80%;
+			    line-height: 1.3;
+			    margin: auto;
+		        padding: 0 0 15px 0;
+			}
+		}
+
+		.lookbook-subtitle
+		{
+			@media all and (min-width: 1024px) {
+				width: 90%;
+				margin: auto;
+			}
+
+			@media all and (min-width: 481px) and (max-width: 1023px) {
+				width: 90%;
+				margin: auto;
+			}
+
+			@media all and (max-width: 480px) {
+				width: 80%;
+			    line-height: 1.3;
+			    margin: auto;
+		        padding: 0 0 15px 0;
+			}
+		}
+
+		.lookbook-subtitle
+		{
+			font-size: 30px;
+		}
+
+		.swiper-slide:not(.first)
+		{
+			@media all and (min-width: 1024px) {
+				&.column-3
+				{
+					width: 33.3333% !important;
+				}
+
+				&.column-2
+				{
+					width: 50% !important;
+				}
+
+				@media all and (max-width: 679px) {
+					width: 100% !important;
+				}
+			}
+		}
+
+		.swiper-slide.first
+		{
+			width: 100% !important;
+		}
+
 		.single-post &
 		{
 			@media all and (min-width: 1024px)
@@ -19,16 +218,9 @@
 			    margin-left: 50% !important;
 			    transform: translateX(-50%);
 			}
-
-			@media all and (max-width: 680px)
-		    {
-		    	width: 100%;
-		    	margin-left: 0 !important;
-		    	left: 0;
-		    }
 		}
 
-		.page
+		.page &
 		{
 			@media all and (min-width: 1518px)
 			{
@@ -38,13 +230,17 @@
 				left: 50%;
 			    transform: translateX(0);
 			}
-
-		    @media all and (max-width: 680px)
-		    {
-		    	width: 100%;
-		    	margin-left: 0 !important;
-		    	left: 0;
-		    }
 		}
+	}
+
+	@media all and (max-width: 479px) {
+		width: 100vw;
+		margin-left: 50%;
+		transform: translateX(-50%);
+	}
+
+	.lookbook_product_overlay
+	{
+	    background: linear-gradient(to top, rgba(0, 0, 0, 0.73) 0%, rgba(0, 0, 0, 0) 70%);
 	}
 }
