--- a/includes/gbt-blocks/assets/css/editor.scss
+++ b/includes/gbt-blocks/assets/css/editor.scss
@@ -279,7 +279,8 @@
         overflow-x: hidden;
         margin-bottom: 20px;
         padding-left: 3px;
-        
+        margin-top: 10px;
+            
         ul {
             list-style: none;
             margin: 0; 
