--- a/includes/gbt-blocks/assets/css/editor.scss
+++ b/includes/gbt-blocks/assets/css/editor.scss
@@ -1,6 +1,6 @@
 .main-inspector-wrapper {
         border-top: 1px solid #e2e4e7;
-        margin-top: 15px;
+        margin: 15px 0;
         padding-top: 15px;
     .products-ajax-search-wrapper {
         position: relative;
