--- a/includes/gbt-blocks/posts_grid/assets/scss/frontend/grid.scss
+++ b/includes/gbt-blocks/posts_grid/assets/scss/frontend/grid.scss
@@ -1,4 +1,4 @@
-.gbt_18_mt_posts_grid.is-style-grid {
+.gbt_18_mt_posts_grid.is-style-default {
 	margin-bottom: 0.5rem;
 
 	.gbt_18_mt_posts_grid_wrapper {
