--- a/includes/gbt-blocks/posts_grid/assets/scss/frontend/grid.scss
+++ b/includes/gbt-blocks/posts_grid/assets/scss/frontend/grid.scss
@@ -72,6 +72,10 @@
 				margin-left: calc( -75vw / 2 + 100% / 2 );
 			    margin-right: calc( -75vw / 2 + 100% / 2 );
 			    max-width: 75vw;
+
+			    .gbt_18_mt_posts_grid_items {
+					margin: 0 -15px;
+				}
 			}
 		}
 
