--- a/includes/gbt-blocks/lookbook/assets/scss/style.scss
+++ b/includes/gbt-blocks/lookbook/assets/scss/style.scss
@@ -4,9 +4,9 @@
 
 	&.full
 	{
-		width: 100vw;
-		margin-left: 50%;
-		transform: translateX(-50%);
+		margin-left: calc( -100vw / 2 + 100% / 2 );
+	    margin-right: calc( -100vw / 2 + 100% / 2 );
+	    max-width: 100vw;
 
 		.lookbook-title
 		{
@@ -222,21 +222,18 @@
 
 		.page &
 		{
-			@media all and (min-width: 1518px)
-			{
-			    width: 75vw;
-			    position: relative;
-				margin-left: -37.5vw !important;
-				left: 50%;
-			    transform: translateX(0);
+			@media all and (min-width: 1518px) {
+			    margin-left: calc( -75vw / 2 + 100% / 2 );
+			    margin-right: calc( -75vw / 2 + 100% / 2 );
+			    max-width: 75vw;
 			}
 		}
 	}
 
 	@media all and (max-width: 479px) {
-		width: 100vw;
-		margin-left: 50%;
-		transform: translateX(-50%);
+		margin-left: calc( -100vw / 2 + 100% / 2 );
+	    margin-right: calc( -100vw / 2 + 100% / 2 );
+	    max-width: 100vw;
 	}
 
 	.lookbook_product_overlay
