--- a/includes/gbt-blocks/social_media_profiles/assets/scss/editor.scss
+++ b/includes/gbt-blocks/social_media_profiles/assets/scss/editor.scss
@@ -1,38 +1,38 @@
 .gbt_18_mt_editor_social_media_wrapper {
-	background-color: #f3f3f4;
-	display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 1em;
-    min-height: 170px;
+    padding: 0.5em;
     width: 100%;
-    text-align: center;
-    font-size: 13px;
-
-    .gbt_18_mt_editor_social_media_icon.dashicon.dashicons-share {
-	    margin-right: 1ch;
-	    margin-top: -6px;
-
-	    &:before {
-			font-family: "dashicons";
-		    font-size: 20px;
-		}
-	}
-
-	.gbt_18_mt_editor_social_media_title {
-	    display: flex;
-	    justify-content: center;
-	    font-weight: 600;
-	    margin-bottom: 1em;
-	    margin-top: 0;
-	}
 
 	.gbt_18_mt_editor_social_media_setup {
-		overflow-wrap: break-word;
+		color: #5d5d5d;
 		font-size: 13px;
 		margin-bottom: 0;
 	    margin-top: 0;
-	    color: #5d5d5d;
+	}
+}
+
+.gbt_18_mt_social_media_profiles {
+	ul {
+
+		&.right {
+			text-align: right;
+		}
+
+		&.center {
+			text-align: center;
+		}
+
+		li {
+			display: inline;
+			list-style-type: none;
+		    padding: 5px 0.6em;
+
+		    a {
+		    	pointer-events: none;
+
+		    	span {
+					display: none;
+				}
+			}
+		}
 	}
 }
