--- a/includes/gbt-blocks/banner/assets/scss/style.scss
+++ b/includes/gbt-blocks/banner/assets/scss/style.scss
@@ -1,23 +1,5 @@
 .gbt_18_mt_banner {
 
-	margin-bottom: 2.5rem;
-
-	&.full
-	{
-		margin-left: calc( -100vw / 2 + 100% / 2 );
-	    margin-right: calc( -100vw / 2 + 100% / 2 );
-	    max-width: 100vw;
-	}
-
-	&.wide
-	{
-		@media all and (min-width: 1520px) {
-			margin-left: calc( -75vw / 2 + 100% / 2 );
-		    margin-right: calc( -75vw / 2 + 100% / 2 );
-		    max-width: 75vw;
-		}
-	}
-
 	&:hover {
 		background-size: 115%;
 
@@ -27,10 +9,11 @@
 	}
 
 	a.gbt_18_mt_banner_wrapper {
-		cursor:pointer;
-		margin-bottom:30px;
-		clear:both;
+		cursor: pointer;
+		margin-bottom: 30px;
+		clear: both;
 		position: relative;
+		text-decoration: none !important;
 
 		&:hover {
 			opacity: 1;
@@ -57,9 +40,6 @@
 			    background-size: cover;
 			    background-repeat: no-repeat;
 			    background-position: center;
-			    -webkit-transition: all 1s ease;
-			    -moz-transition: all 1s ease;
-			    -o-transition: all 1s ease;
 			    transition: all 1s ease;
 			    z-index: 2;
 			}
@@ -73,18 +53,12 @@
 				width:100%;
 				height:100%;
 				transition: all 0.2s linear;
-				-moz-transition: all 0.2s linear;
-				-ms-transition: all 0.2s linear;
-				-o-transition: all 0.2s linear;
-				-webkit-transition: all 0.2s linear;
 				z-index: 3;
 		    }
 
 		    &:hover {
 		    	.gbt_18_mt_banner_background {
 		    		transform: scale(1.1);
-					-moz-transform: scale(1.1);
-					-webkit-transform: scale(1.1);
 		    	}
 
 		    	&:before {
@@ -111,15 +85,12 @@
 
 					.gbt_18_mt_banner_title {
 						padding: 0;
-						margin: 0;
-						line-height: 1.391em;
+						margin: 0 0 0.5rem 0;
 					}
 
 					.gbt_18_mt_banner_subtitle {
 						padding: 0;
 						margin: 0;
-						font-weight: normal;
-						line-height: 1.5em;
 					}
 				}
 			}
