--- a/includes/gbt-blocks/posts_grid/assets/scss/frontend/grid.scss
+++ b/includes/gbt-blocks/posts_grid/assets/scss/frontend/grid.scss
@@ -1,18 +1,18 @@
 .gbt_18_mt_posts_grid.is-style-default {
-	margin-bottom: 0.5rem;
 
-	.gbt_18_mt_posts_grid_wrapper {
-		position: relative;
-	  	overflow: hidden;
+	&:not(.alignfull)
+	{
+		.gbt_18_mt_posts_grid_wrapper {
 
-	  	@media all and (min-width: 640px) {
-	  		margin: 0 -15px;
-	  	}
+		  	@media all and (min-width: 640px) {
+		  		margin: 0 -15px;
+		  	}
+		}
+	}
 
-		&.full {
-			margin-left: calc( -100vw / 2 + 100% / 2 );
-		    margin-right: calc( -100vw / 2 + 100% / 2 );
-		    max-width: 100vw;
+	&.alignfull {
+
+		.gbt_18_mt_posts_grid_wrapper {
 
 		    &.columns-1 {
 		    	.gbt_18_mt_posts_grid_item {
@@ -66,18 +66,11 @@
 				}
 		    }
 		}
+	}
 
-		&.wide {
-			@media all and (min-width: 1570px) {
-				margin-left: calc( -75vw / 2 + 100% / 2 );
-			    margin-right: calc( -75vw / 2 + 100% / 2 );
-			    max-width: 75vw;
-
-			    .gbt_18_mt_posts_grid_items {
-					margin: 0 -15px;
-				}
-			}
-		}
+	.gbt_18_mt_posts_grid_wrapper {
+		position: relative;
+	  	overflow: hidden;
 
 		&.columns-1 
 		{
@@ -189,18 +182,8 @@
 		.gbt_18_mt_posts_grid_title {
 			display: block;
 			text-align: left;
-			font-size: 24px;
-			line-height: 1.4em;
 			margin: 0 0 15px;
 		    transition: all .5s;
-
-		    @media all and (min-width: 640px) and (max-width: 1023px) {
-		    	font-size: 22px;
-		    }
-
-		    @media all and (max-width: 639px) {
-		    	font-size: 20px;
-		    }
 
 			&:hover {
 			    opacity: 1;
