--- a/includes/gbt-blocks/posts_grid/assets/scss/frontend/list.scss
+++ b/includes/gbt-blocks/posts_grid/assets/scss/frontend/list.scss
@@ -1,21 +1,5 @@
 .gbt_18_mt_posts_grid.is-style-list {
 
-	.gbt_18_mt_posts_grid_wrapper {
-		&.full {
-			margin-left: calc( -100vw / 2 + 100% / 2 );
-		    margin-right: calc( -100vw / 2 + 100% / 2 );
-		    max-width: 100vw;
-		}
-
-		&.wide {
-			@media all and (min-width: 1570px) {
-				margin-left: calc( -75vw / 2 + 100% / 2 );
-			    margin-right: calc( -75vw / 2 + 100% / 2 );
-			    max-width: 75vw;
-			}
-		}
-	}
-
 	.gbt_18_mt_posts_grid_item
 	{
 		position: relative;
@@ -32,7 +16,7 @@
 		display: block;
 		overflow: hidden;
 		position: relative;
-		
+		text-decoration: none !important;
 		width: 100%;
 		
 		-webkit-mask-image: -webkit-radial-gradient(white, black);
@@ -46,10 +30,7 @@
 		width: 100%;
 		height: 100%;
 		z-index: 2;
-		-webkit-transition: all .3s ease;
-		-moz-transition: all .3s ease;
-		-o-transition: all .3s ease;
-		-ms-transition: all .3s ease;
+		transition: all .3s ease;
 	}
 
 	.gbt_18_mt_posts_grid_item_link:hover .gbt_18_mt_posts_grid_img_overlay
