--- a/includes/gbt-blocks/lookbook/assets/scss/style.scss
+++ b/includes/gbt-blocks/lookbook/assets/scss/style.scss
@@ -1,243 +1,122 @@
-.wp-block-gbt-lookbook
-{
-	margin-bottom: 2.5rem;
+.gbt_18_mt_lookbook {
+	visibility: hidden;
+    position: relative;
 
-	&.full
-	{
-		margin-left: calc( -100vw / 2 + 100% / 2 );
-	    margin-right: calc( -100vw / 2 + 100% / 2 );
-	    max-width: 100vw;
+	.swiper-slide.first {
+		text-align: center;
 
-		.lookbook-title
-		{
-			@media all and (min-width: 1024px) {
-				font-size: 100px;
-				width: 90%;
-				margin: auto;
-			}
+		.gbt_18_mt_lookbook_first_slide {
+			position: relative;
+			top: 50%;
+			margin-top: -10px;
+		    transform: translateY(-50%);
+			max-width: 100%;
+			padding: 0 50px;
+			margin: 0 auto;
 
-			@media all and (min-width: 481px) and (max-width: 1023px) {
-				font-size: 42px;
-				width: 90%;
-				margin: auto;
-			}
-
-			@media all and (max-width: 480px) {
-				width: 80%;
-			    line-height: 1.3;
-			    margin: auto;
-		        padding: 0 0 15px 0;
-			}
-		}
-
-		.lookbook-subtitle
-		{
-			@media all and (min-width: 1024px) {
-				width: 90%;
-				margin: auto;
-			}
-
-			@media all and (min-width: 481px) and (max-width: 1023px) {
-				width: 90%;
-				margin: auto;
-			}
-
-			@media all and (max-width: 480px) {
-				width: 80%;
-			    line-height: 1.3;
-			    margin: auto;
-		        padding: 0 0 15px 0;
-			}
-		}
-
-		.swiper-slide:not(.first)
-		{
-			@media all and (max-width: 679px) {
-				width: 100% !important;
-			}
-		}
-
-		.swiper-slide.first
-		{
-			width: 100% !important;
-		}
-	}
-
-	&.center
-	{
-		.lookbook-title
-		{
-			@media all and (min-width: 1024px) {
-				font-size: 80px;
-				width: 90%;
-				margin: auto;
-			}
-
-			@media all and (min-width: 481px) and (max-width: 1023px) {
-				font-size: 42px;
-				width: 90%;
-				margin: auto;
-			}
-
-			@media all and (max-width: 480px) {
-				width: 80%;
-			    line-height: 1.3;
-			    margin: auto;
-		        padding: 0 0 15px 0;
-			}
-		}
-
-		.lookbook-subtitle
-		{
-			@media all and (min-width: 1024px) {
-				width: 90%;
-				margin: auto;
-			}
-
-			@media all and (min-width: 481px) and (max-width: 1023px) {
-				width: 90%;
-				margin: auto;
-			}
-
-			@media all and (max-width: 480px) {
-				width: 80%;
-			    line-height: 1.3;
-			    margin: auto;
-		        padding: 0 0 15px 0;
-			}
-		}
-
-		.lookbook-subtitle
-		{
-			font-size: 30px;
-		}
-
-		.swiper-slide:not(.first)
-		{
-			@media all and (min-width: 1024px) {
-				&.column-3
-				{
-					width: 33.3333% !important;
-				}
-
-				&.column-2
-				{
-					width: 50% !important;
-				}
-
-				@media all and (max-width: 679px) {
-					width: 100% !important;
-				}
-			}
-		}
-
-		.swiper-slide.first
-		{
-			width: 100% !important;
-		}
-	}
-
-	&.wide
-	{
-		.lookbook-title
-		{
-			@media all and (min-width: 1024px) {
-				font-size: 80px;
-				width: 90%;
-				margin: auto;
-			}
-
-			@media all and (min-width: 481px) and (max-width: 1023px) {
-				font-size: 42px;
-				width: 90%;
-				margin: auto;
-			}
-
-			@media all and (max-width: 480px) {
-				width: 80%;
-			    line-height: 1.3;
-			    margin: auto;
-		        padding: 0 0 15px 0;
-			}
-		}
-
-		.lookbook-subtitle
-		{
-			@media all and (min-width: 1024px) {
-				width: 90%;
-				margin: auto;
-			}
-
-			@media all and (min-width: 481px) and (max-width: 1023px) {
-				width: 90%;
-				margin: auto;
-			}
-
-			@media all and (max-width: 480px) {
-				width: 80%;
-			    line-height: 1.3;
-			    margin: auto;
-		        padding: 0 0 15px 0;
-			}
-		}
-
-		.lookbook-subtitle
-		{
-			font-size: 30px;
-		}
-
-		.swiper-slide:not(.first)
-		{
-			@media all and (min-width: 1024px) {
-				&.column-3
-				{
-					width: 33.3333% !important;
-				}
-
-				&.column-2
-				{
-					width: 50% !important;
-				}
-
-				@media all and (max-width: 679px) {
-					width: 100% !important;
-				}
-			}
-		}
-
-		.swiper-slide.first
-		{
-			width: 100% !important;
-		}
-
-		.single-post &
-		{
-			@media all and (min-width: 1024px)
-			{
-			    width: 75vw;
-			    margin-left: 50% !important;
-			    transform: translateX(-50%);
-			}
-		}
-
-		.page &
-		{
-			@media all and (min-width: 1518px) {
-			    margin-left: calc( -75vw / 2 + 100% / 2 );
-			    margin-right: calc( -75vw / 2 + 100% / 2 );
-			    max-width: 75vw;
+			h2 {
+				padding: 0 0 30px 0;
 			}
 		}
 	}
 
-	@media all and (max-width: 479px) {
-		margin-left: calc( -100vw / 2 + 100% / 2 );
-	    margin-right: calc( -100vw / 2 + 100% / 2 );
-	    max-width: 100vw;
+	.swiper-slide {
+		background-size: cover;
+		background-position: center;
+		position: relative;
 	}
 
-	.lookbook_product_overlay
+	.gbt_18_mt_lookbook_product {
+		overflow: hidden;
+		position: relative;
+		height: 100%;
+		background-size: cover;
+		background-position: center;
+		overflow: hidden;
+		transition: .5s ease;
+
+		.gbt_18_mt_lookbook_product_wrapper {
+			height: 100%;
+			background-size: cover;
+			background-position: center;
+			overflow: hidden;
+			display: block;
+			transition: transform .5s ease;
+			transform: translate3d(0, 0, 0);
+			backface-visibility: hidden;
+			transform-style: preserve-3d;
+		}
+
+		&:hover {
+			box-shadow: 0px 0px 80px 0px rgba(0,0,0,0.3);
+			z-index: 1;
+
+			.gbt_18_mt_lookbook_product_wrapper {
+				-webkit-transform: perspective(1000px) translate3d(0,0,50px);
+				-moz-transform: perspective(1000px) translate3d(0,0,50px) rotate(0.01deg);
+				transform: perspective(1000px) translate3d(0,0,50px);
+			}
+		}
+	}
+
+	.swiper-button-prev,
+	.swiper-button-next {
+		background-size: 25px;
+        height: 75px;
+        width: 75px;
+        opacity: 0.5;
+        display: block;
+        transition: all .3s;
+        outline: 0;
+
+		&.swiper-button-disabled {
+			opacity: 0;
+		}
+	}
+
+	.swiper-button-prev
 	{
-	    background: linear-gradient(to top, rgba(0, 0, 0, 0.73) 0%, rgba(0, 0, 0, 0) 70%);
+		background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23000000'%2F%3E%3C%2Fsvg%3E");
+        left: 0;
+	}
+
+	.swiper-button-next
+	{
+		background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23000000'%2F%3E%3C%2Fsvg%3E");
+        right: 0;
+	}
+
+	.gbt_18_mt_lookbook_product_infos {
+		position: absolute;
+		padding: 45px 70px;
+		bottom: 0px;
+		left: 0px;
+		z-index: 200;
+		pointer-events: none;
+		width: 100%;
+	}
+
+	.gbt_18_mt_lookbook_product_overlay {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		width: 100%;
+		background: -moz-linear-gradient(bottom,  rgba(0,0,0,1) 0%, rgba(0,0,0,0) 50%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left bottom, left top, color-stop(0%,rgba(0,0,0,1)), color-stop(50%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 50%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 50%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 50%); /* IE10+ */
+		background: linear-gradient(to top, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 50%); /* W3C */
+		height: 100%;
+		z-index: 1;
+		opacity: 0;
+		transition: .3s;
+		display: block;
+
+		&:hover {
+			opacity: .5;
+		}
 	}
 }
