--- a/includes/gbt-blocks/posts_slider/assets/scss/style.scss
+++ b/includes/gbt-blocks/posts_slider/assets/scss/style.scss
@@ -1,18 +1,134 @@
 .gbt_18_mt_posts_slider {
-	margin-bottom: 2.5rem;
 
-	&.full {
-		margin-left: calc( -100vw / 2 + 100% / 2 );
-	    margin-right: calc( -100vw / 2 + 100% / 2 );
-	    max-width: 100vw;
-	    padding: 0px 23px;
+	position: relative;
+
+	&.alignfull {
+	    padding: 0 30px;
+
+	    &:hover {
+	    	.swiper-button-prev {
+	        	left: -9px;
+	        }
+
+	        .swiper-button-next {
+	        	right: -9px;
+	        }
+	    }
 	}
 
-	&.wide {
-		@media all and (min-width: 1330px) {
-			margin-left: calc( -75vw / 2 + 100% / 2 );
-		    margin-right: calc( -75vw / 2 + 100% / 2 );
-		    max-width: 75vw;
+	.swiper-container {
+
+		.swiper-wrapper {
+			padding-bottom: 20px;
 		}
+
+		.swiper-slide {
+			padding: 0 0 35px 0;
+
+			.gbt_18_mt_posts_slider_title {
+				margin: 0 0 12px;
+			}
+
+			.gbt_18_mt_posts_slider_title,
+			.gbt_18_mt_posts_slider_date {
+				text-align: center;
+			}
+
+			.gbt_18_mt_posts_slider_link {
+				display: block;
+				overflow: hidden;
+				position: relative;
+				height: 245px;
+				width: 100%;
+				margin-bottom: 18px;
+				
+				-webkit-mask-image: -webkit-radial-gradient(white, black);
+			}
+
+			.gbt_18_mt_posts_slider_img {
+				display: block;
+				width: 100%;
+				height: 100%;
+				background-position: center center;
+				background-size: cover;
+				transition: all 1s ease;
+			}
+
+			.gbt_18_mt_posts_slider_noimg {
+				background: #f5f5f5;
+				height: 245px;
+				width: 100%;
+				display: block;
+			}
+
+			.gbt_18_mt_posts_slider_overlay {
+				background: rgba(0,0,0,0);
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				z-index: 1;
+				transition: all .3s ease;
+			}
+
+			&:hover {
+				.gbt_18_mt_posts_slider_overlay {
+					background: rgba(0,0,0,0.4);
+					transition: all .3s ease;
+				}
+
+				.gbt_18_mt_posts_slider_img {
+					transform: translateZ(0) scale(1.1,1.1);
+					-ms-transform: none;
+				}
+			}
+		}
+	}
+
+	&:hover {
+
+		.swiper-button-prev {
+        	left: -55px;
+        	opacity: 1;
+        	visibility: visible;
+        	transition: all .3s;
+        }
+
+        .swiper-button-next {
+        	right: -55px;
+        	opacity: 1;
+        	visibility: visible;
+        	transition: all .3s;
+        }
+	}
+
+	.swiper-button-prev,
+	.swiper-button-next {
+		background-size: 15px;
+        height: 55px;
+        width: 55px;
+        opacity: 0;
+        display: block;
+        transition: all .3s;
+        outline: 0;
+
+		&.swiper-button-disabled {
+			opacity: 0;
+		}
+	}
+
+	.swiper-button-prev {
+		background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23000000'%2F%3E%3C%2Fsvg%3E");
+        left: -90px;
+        visibility: hidden;
+	}
+
+	.swiper-button-next {
+		background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23000000'%2F%3E%3C%2Fsvg%3E");
+        right: -90px;
+        visibility: hidden;
+	}
+
+	.swiper-pagination-bullet-active {
+		background-color: #000000;
 	}
 }
