--- a/includes/social-media/assets/css/social-media.css
+++ b/includes/social-media/assets/css/social-media.css
@@ -1,75 +1,45 @@
-ul.sk_social_icons_list {
+.site-social-icons-shortcode {
+  vertical-align: middle;
   clear: both;
-  display: block;
-  margin: 15px 0;
-  padding: 0;
-  vertical-align: middle; }
-  ul.sk_social_icons_list.left {
-    text-align: left; }
-  ul.sk_social_icons_list.center {
-    text-align: center; }
-  ul.sk_social_icons_list.right {
-    text-align: right; }
-  ul.sk_social_icons_list li.sk_social_icon {
-    display: inline-block;
+  margin: 5px -15px 15px -15px;
+  display: block; }
+  .site-social-icons-shortcode ul.mt_social_icons_list {
     list-style: none;
-    line-height: 1;
-    margin: 10px 30px 10px 0; }
-    ul.sk_social_icons_list li.sk_social_icon:last-child {
-      margin-right: 0; }
-    ul.sk_social_icons_list li.sk_social_icon a.sk_social_icon_link:hover i {
-      opacity: .75; }
-    ul.sk_social_icons_list li.sk_social_icon a.sk_social_icon_link i {
-      -webkit-transition: opacity .2s;
-      -o-transition: opacity .2s;
-      transition: opacity .2s; }
-
-.site-top-bar-social-icons-wrapper {
-  display: block;
-  float: right;
-  padding: 8px 0; }
-  .site-top-bar-social-icons-wrapper ul.sk_social_icons_list {
     margin: 0;
-    padding-left: 50px; }
-    .site-top-bar-social-icons-wrapper ul.sk_social_icons_list li.sk_social_icon {
-      margin: 5px 10px 5px 0; }
-      .site-top-bar-social-icons-wrapper ul.sk_social_icons_list li.sk_social_icon:last-child {
-        margin-right: 0; }
-      .site-top-bar-social-icons-wrapper ul.sk_social_icons_list li.sk_social_icon svg {
-        width: 16px !important;
-        height: 16px !important; }
+    padding: 0;
+    line-height: 1em; }
+    .site-social-icons-shortcode ul.mt_social_icons_list.left {
+      text-align: left; }
+    .site-social-icons-shortcode ul.mt_social_icons_list.center {
+      text-align: center; }
+    .site-social-icons-shortcode ul.mt_social_icons_list.right {
+      text-align: right; }
+    .site-social-icons-shortcode ul.mt_social_icons_list li.mt_social_icon {
+      padding: 5px 12px;
+      display: inline-block; }
 
-.footer_socials_wrapper {
-  margin-bottom: 21px; }
-  @media only screen and (min-width: 40.063em) {
-    .footer_socials_wrapper {
-      margin-bottom: 34px; } }
+#site-top-bar .site-social-icons-shortcode {
+  float: right;
+  -webkit-box-ordinal-group: 3;
+  -ms-flex-order: 2;
+  order: 2;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  text-align: center;
+  margin: 5px 0 0 0; }
+  #site-top-bar .site-social-icons-shortcode ul.mt_social_icons_list {
+    line-height: 1.8em;
+    list-style: none;
+    margin: 0;
+    padding: 0 0 0 20px;
+    overflow: auto; }
+    #site-top-bar .site-social-icons-shortcode ul.mt_social_icons_list li.mt_social_icon {
+      padding: 8px 7px 7px 7px;
+      float: left; }
+      #site-top-bar .site-social-icons-shortcode ul.mt_social_icons_list li.mt_social_icon:last-child {
+        padding: 8px 0 7px 7px; }
 
-.off-canvas ul.sk_social_icons_list li.sk_social_icon {
-  margin: 10px 22px 10px 0; }
-  .off-canvas ul.sk_social_icons_list li.sk_social_icon svg {
-    width: 18px !important;
-    height: 18px !important; }
-
-.rtl ul.sk_social_icons_list li.sk_social_icon {
-  margin: 10px 0 10px 30px; }
-  .rtl ul.sk_social_icons_list li.sk_social_icon:last-child {
-    margin-left: 0; }
-
-.rtl .widget_shopkeeper_social_media ul.sk_social_icons_list {
-  text-align: right; }
-
-.rtl .site-top-bar-social-icons-wrapper {
-  float: left; }
-  .rtl .site-top-bar-social-icons-wrapper ul.sk_social_icons_list {
-    padding-left: 0;
-    padding-right: 50px; }
-    .rtl .site-top-bar-social-icons-wrapper ul.sk_social_icons_list li.sk_social_icon {
-      margin: 5px  5px 10px; }
-      .rtl .site-top-bar-social-icons-wrapper ul.sk_social_icons_list li.sk_social_icon:last-child {
-        margin-left: 0; }
-
-.rtl .off-canvas ul.sk_social_icons_list {
-  text-align: right; }
-  .rtl .off-canvas ul.sk_social_icons_list li.sk_social_icon {
-    margin: 10px 0 10px 22px; }
+.offcanvas-left-content .site-social-icons-shortcode {
+  margin: 0; }
+  .offcanvas-left-content .site-social-icons-shortcode ul.mt_social_icons_list {
+    padding: 30px 10px; }
