--- a/includes/social-media/assets/css/social-media.css
+++ b/includes/social-media/assets/css/social-media.css
@@ -26,7 +26,8 @@
   -ms-flex-negative: 0;
   flex-shrink: 0;
   text-align: center;
-  margin: 5px 0 0 0; }
+  margin: 5px 0 0 0;
+  max-width: 170px; }
   #site-top-bar .site-social-icons-shortcode ul.mt_social_icons_list {
     line-height: 1.8em;
     list-style: none;
