--- a/includes/customizer/assets/scss/customizer.scss
+++ b/includes/customizer/assets/scss/customizer.scss
@@ -1,19 +1,19 @@
-.sk-toggle-content .customize-control-title
+.mt-toggle-content .customize-control-title
 {
   display: inline-block;
 }
 
-.sk-toggle-content hr
+.mt-toggle-content hr
 {
   margin-bottom: 12px;
 }
 
-input[type=checkbox].sk-tgl
+input[type=checkbox].mt-tgl
 {
   display: none;
 }
 
-input[type=checkbox].sk-tgl + .sk-tgl-btn
+input[type=checkbox].mt-tgl + .mt-tgl-btn
 {
   border: 1px solid #b4b9be;
   display: inline-block;
@@ -30,13 +30,13 @@ input[type=checkbox].sk-tgl + .sk-tgl-btn
   transition: background 350ms ease;
 }
 
-input[type=checkbox].sk-tgl:checked + .sk-tgl-btn:after
+input[type=checkbox].mt-tgl:checked + .mt-tgl-btn:after
 {
   background: #0073aa;
   transform: translate3d(100%, -50%, 0);
 }
 
-input[type=checkbox].sk-tgl + .sk-tgl-btn:after
+input[type=checkbox].mt-tgl + .mt-tgl-btn:after
 {
   content: "";
   display: block;
