--- a/includes/social-media/assets/scss/social-media.scss
+++ b/includes/social-media/assets/scss/social-media.scss
@@ -45,6 +45,7 @@
 	    flex-shrink: 0;
         text-align: center;
     	margin: 5px 0 0 0;
+	    max-width: 170px;
 
     	ul.mt_social_icons_list
     	{
