--- a/includes/social-sharing/assets/css/social-sharing.css
+++ b/includes/social-sharing/assets/css/social-sharing.css
@@ -1,98 +1,116 @@
-@media only screen and (max-width: 1023px) {
-  .product_socials_wrapper {
-    display: table;
-    width: 100%;
-    text-align: center;
-    padding: 20px 0;
-    margin: 30px 0;
-    border-top-width: 1px;
-    border-top-style: solid;
-    border-bottom-width: 1px;
-    border-bottom-style: solid; }
-    .product_socials_wrapper .share-product-text,
-    .product_socials_wrapper .product_socials_wrapper_inner {
-      display: table-cell;
-      vertical-align: middle;
-      width: 50%; }
-    .product_socials_wrapper .share-product-text {
-      font-size: 10px;
-      text-transform: uppercase;
-      font-weight: bold;
-      text-align: left; }
-    .product_socials_wrapper .product_socials_wrapper_inner {
-      text-align: right; }
-      .product_socials_wrapper .product_socials_wrapper_inner a {
-        padding-right: 10px; } }
+.box-share-master-container {
+  margin-bottom: 25px; }
 
-@media only screen and (min-width: 1024px) {
-  .product_socials_wrapper {
-    position: fixed;
-    top: 430px;
-    right: 100%;
-    z-index: 999;
-    -webkit-transition: all .5s;
-    -o-transition: all .5s;
-    transition: all .5s;
-    -webkit-animation: slide-in-from-left;
-    animation: slide-in-from-left;
-    -webkit-animation-duration: 3s;
-    animation-duration: 3s;
-    -webkit-animation-delay: 1.5s;
-    animation-delay: 1.5s;
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-    -webkit-animation-timing-function: ease-in-out;
-    animation-timing-function: ease-in-out;
-    -webkit-transform: translateX(0);
-    -ms-transform: translateX(0);
-    transform: translateX(0); }
-    .product_socials_wrapper .share-product-text {
-      display: none; }
-    .product_socials_wrapper .product_socials_wrapper_inner a {
-      display: block;
-      -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.1);
-      box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.1);
-      border-radius: 50%;
-      text-align: center;
-      padding-top: 10px;
-      margin: 10px 0;
-      width: 38px;
-      height: 38px; }
-      .product_socials_wrapper .product_socials_wrapper_inner a:first-child {
-        margin-top: 0; } }
+.box-share-container {
+  display: inline-block;
+  position: relative;
+  z-index: 99; }
 
-@-webkit-keyframes slide-in-from-left {
-  0% {
-    -webkit-transform: translateX(-55px);
-    transform: translateX(-55px); }
-  50% {
-    -webkit-transform: translateX(95px);
-    transform: translateX(95px); }
-  75% {
-    -webkit-transform: translateX(95px);
-    transform: translateX(95px); }
-  100% {
-    -webkit-transform: translateX(95px);
-    transform: translateX(95px); } }
+.box-share-container a {
+  font-weight: bold; }
 
-@keyframes slide-in-from-left {
-  0% {
-    -webkit-transform: translateX(-55px);
-    transform: translateX(-55px); }
-  50% {
-    -webkit-transform: translateX(95px);
-    transform: translateX(95px); }
-  75% {
-    -webkit-transform: translateX(95px);
-    transform: translateX(95px); }
-  100% {
-    -webkit-transform: translateX(95px);
-    transform: translateX(95px); } }
+.trigger-share-list {
+  display: inline-block;
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  position: relative; }
 
-@media only screen and (max-width: 1023px) {
-  .rtl .product_socials_wrapper_inner {
-    float: left;
-    text-align: left; }
-  .rtl .share-product-text {
-    float: right;
-    text-align: right; } }
+.box-share-list {
+  position: absolute;
+  top: 8px;
+  left: 50%;
+  width: 0px;
+  height: 0px;
+  overflow: hidden;
+  text-align: left;
+  background: #fff;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: height 0.3s, width 0.3s, -webkit-transform 0.3s;
+  transition: height 0.3s, width 0.3s, -webkit-transform 0.3s;
+  -o-transition: height 0.3s, width 0.3s, transform 0.3s;
+  transition: height 0.3s, width 0.3s, transform 0.3s;
+  transition: height 0.3s, width 0.3s, transform 0.3s, -webkit-transform 0.3s; }
+
+.box-share-container.open .box-share-list {
+  width: 185px; }
+
+.box-share-list-inner {
+  padding: 24px 13px 28px 22px;
+  width: 185px; }
+
+.box-share-link {
+  display: block;
+  font-size: 13px;
+  color: #000;
+  margin-bottom: 13px;
+  font-weight: normal;
+  position: relative;
+  left: 200%;
+  -webkit-transition: left 0.3s, opacity 0.3s;
+  -o-transition: left 0.3s, opacity 0.3s;
+  transition: left 0.3s, opacity 0.3s;
+  -webkit-transform: translateZ(0);
+  -webkit-font-smoothing: antialiased !important; }
+  .box-share-link:hover {
+    opacity: .5; }
+
+.box-share-link svg {
+  position: relative;
+  top: 3px;
+  margin: 0 5px 0 0; }
+
+.box-share-container.open .box-share-link {
+  left: 0; }
+
+.box-share-container.open a:nth-child(1) {
+  -webkit-transition-delay: 0.05s;
+  -o-transition-delay: 0.05s;
+  transition-delay: 0.05s; }
+
+.box-share-container.open a:nth-child(2) {
+  -webkit-transition-delay: 0.1s;
+  -o-transition-delay: 0.1s;
+  transition-delay: 0.1s; }
+
+.box-share-container.open a:nth-child(3) {
+  -webkit-transition-delay: 0.15s;
+  -o-transition-delay: 0.15s;
+  transition-delay: 0.15s; }
+
+.box-share-container.open a:nth-child(4) {
+  -webkit-transition-delay: 0.2s;
+  -o-transition-delay: 0.2s;
+  transition-delay: 0.2s; }
+
+.box-share-link:last-child {
+  margin-bottom: 0; }
+
+.box-share-link:hover {
+  color: #000 !important; }
+
+.box-share-link span {
+  padding-bottom: 4px;
+  border-bottom: 2px solid transparent;
+  -webkit-transition: border-color 0.3s;
+  -o-transition: border-color 0.3s;
+  transition: border-color 0.3s; }
+
+.box-share-link:hover span {
+  border-bottom-width: 2px;
+  border-bottom-style: solid; }
+
+.box-share-container.post-share-container {
+  display: block;
+  text-align: center;
+  margin: 48px 0 40px; }
+
+/* min-width 641px, medium screens */
+@media only screen and (min-width: 40.063em) {
+  .box-share-container.post-share-container {
+    margin: 58px 0 -48px; } }
