--- a/includes/social-sharing/assets/scss/social-sharing.scss
+++ b/includes/social-sharing/assets/scss/social-sharing.scss
@@ -1,125 +1,141 @@
-@media only screen and (max-width: 1023px)  {
-
-    .product_socials_wrapper
-    {
-        display: table;
-        width: 100%; 
-        text-align: center;
-        padding: 20px 0; 
-        margin: 30px 0; 
-        border-top-width: 1px;
-        border-top-style: solid; 
-        border-bottom-width: 1px;
-        border-bottom-style: solid; 
-        
-        .share-product-text,
-        .product_socials_wrapper_inner
-        {
-            display: table-cell;
-            vertical-align: middle;
-            width: 50%; 
-        }  
-        
-        .share-product-text
-        {
-            font-size: 10px;
-            text-transform: uppercase;  
-            font-weight: bold;
-            text-align: left;
-        }
-        
-        .product_socials_wrapper_inner
-        {
-            text-align: right;
-            
-            a
-            {
-                padding-right: 10px; 
-            }
-        }
-    }
-}
-
-@media only screen and (min-width: 1024px)  {
-
-    .product_socials_wrapper 
-    {
-        position: fixed;
-        top: 430px;
-        right: 100%;  
-        z-index: 999; 
-        transition: all .5s;
-        animation: slide-in-from-left; 
-        animation-duration: 3s;
-        animation-delay: 1.5s;
-        animation-fill-mode: forwards; 
-        animation-timing-function: ease-in-out;
-        transform: translateX(0);
-
-        .share-product-text
-        {
-            display: none;
-        }
-        
-        .product_socials_wrapper_inner
-        {
-            a
-            {
-                display: block;
-                box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.1); 
-                border-radius: 50%;
-                text-align: center;
-                padding-top: 10px; 
-                margin: 10px 0; 
-                width: 38px;
-                height: 38px;  
-                
-                &:first-child
-                {
-                    margin-top: 0;
-                }
-            }
-        }
-    }
-}
-
-@keyframes slide-in-from-left 
+.box-share-master-container
 {
-    0% 
-    {
-        transform: translateX(-55px);
-    }
+    margin-bottom: 25px;
+}
 
-    50% 
-    {
-        transform: translateX(95px);
-    }
+.box-share-container
+{
+    display: inline-block;
+    position: relative;
+    z-index: 99;
+}
 
-    75% 
-    {
-        transform: translateX(95px);
-    }
+.box-share-container a
+{
+    font-weight: bold;
+}
 
-    100% 
+.trigger-share-list
+{
+    display: inline-block;
+    font-size: 13px;
+    line-height: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+    position: relative;
+}
+
+.box-share-list
+{
+    position: absolute;
+    top: 8px;
+    left: 50%;
+    width: 0px;
+    height: 0px;
+    overflow: hidden;
+    text-align: left;
+    background: #fff;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    transform: translate(-50%,-50%);
+    transition: height 0.3s, width 0.3s, transform 0.3s;
+}
+
+.box-share-container.open .box-share-list
+{
+    width: 185px;
+}
+
+.box-share-list-inner
+{
+    padding: 24px 13px 28px 22px;
+    width: 185px;
+}
+
+.box-share-link
+{
+    display: block;
+    font-size: 13px;
+    color: #000;
+    margin-bottom: 13px;
+    font-weight: normal;
+    position: relative;
+    left: 200%;
+    transition: left 0.3s, opacity 0.3s;
+     -webkit-transform: translateZ(0);
+     -webkit-font-smoothing: antialiased !important;
+
+    &:hover
     {
-        transform: translateX(95px);
+        opacity: .5;
     }
 }
 
-.rtl
+.box-share-link svg
 {
-    @media only screen and (max-width: 1023px) {
+    position: relative;
+    top: 3px;
+    margin: 0 5px 0 0;
+}
 
-        .product_socials_wrapper_inner
-        {
-            float: left;
-            text-align: left;
-        }
+.box-share-container.open .box-share-link
+{
+    left: 0
+}
 
-        .share-product-text
-        {
-            float: right;
-            text-align: right;
-        }
+.box-share-container.open a:nth-child(1)
+{
+    transition-delay: 0.05s;
+}
+
+.box-share-container.open a:nth-child(2)
+{
+    transition-delay: 0.1s;
+}
+
+.box-share-container.open a:nth-child(3)
+{
+    transition-delay: 0.15s;
+}
+
+.box-share-container.open a:nth-child(4)
+{
+    transition-delay: 0.2s;
+}
+
+.box-share-link:last-child
+{
+    margin-bottom: 0;
+}
+
+.box-share-link:hover
+{
+    color: #000 !important;
+}
+
+.box-share-link span
+{
+    padding-bottom: 4px;
+    border-bottom: 2px solid transparent;
+    transition: border-color 0.3s;
+}
+
+.box-share-link:hover span
+{
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
+}
+
+.box-share-container.post-share-container
+{
+    display: block;
+    text-align: center;
+    margin: 48px 0 40px;
+}
+
+/* min-width 641px, medium screens */
+@media only screen and (min-width: 40.063em) {
+    .box-share-container.post-share-container
+    {
+        margin: 58px 0 -48px;
     }
 }
