--- a/includes/gbt-blocks/lookbook/assets/css/style.css
+++ b/includes/gbt-blocks/lookbook/assets/css/style.css
@@ -1,1 +1,113 @@
-.gbt_18_mt_lookbook{visibility:hidden;position:relative}.gbt_18_mt_lookbook .swiper-slide.first{text-align:center}.gbt_18_mt_lookbook .swiper-slide.first .gbt_18_mt_lookbook_first_slide{position:relative;top:50%;margin-top:-10px;-webkit-transform:translateY(-50%);-ms-transform:translateY(-50%);transform:translateY(-50%);max-width:100%;padding:0 50px;margin:0 auto}.gbt_18_mt_lookbook .swiper-slide.first .gbt_18_mt_lookbook_first_slide h2{padding:0 0 30px 0}.gbt_18_mt_lookbook .swiper-slide{background-size:cover;background-position:center;position:relative}.gbt_18_mt_lookbook .gbt_18_mt_lookbook_product{overflow:hidden;position:relative;height:100%;background-size:cover;background-position:center;overflow:hidden;-webkit-transition:.5s ease;-o-transition:.5s ease;transition:.5s ease}.gbt_18_mt_lookbook .gbt_18_mt_lookbook_product .gbt_18_mt_lookbook_product_wrapper{height:100%;background-size:cover;background-position:center;overflow:hidden;display:block;-webkit-transition:-webkit-transform .5s ease;transition:-webkit-transform .5s ease;-o-transition:transform .5s ease;transition:transform .5s ease;transition:transform .5s ease, -webkit-transform .5s ease;-webkit-transform:translate3d(0, 0, 0);transform:translate3d(0, 0, 0);-webkit-backface-visibility:hidden;backface-visibility:hidden;-webkit-transform-style:preserve-3d;transform-style:preserve-3d}.gbt_18_mt_lookbook .gbt_18_mt_lookbook_product:hover{-webkit-box-shadow:0px 0px 80px 0px rgba(0, 0, 0, 0.3);box-shadow:0px 0px 80px 0px rgba(0, 0, 0, 0.3);z-index:1}.gbt_18_mt_lookbook .gbt_18_mt_lookbook_product:hover .gbt_18_mt_lookbook_product_wrapper{-webkit-transform:perspective(1000px) translate3d(0, 0, 50px);-moz-transform:perspective(1000px) translate3d(0, 0, 50px) rotate(0.01deg);transform:perspective(1000px) translate3d(0, 0, 50px)}.gbt_18_mt_lookbook .swiper-button-next,.gbt_18_mt_lookbook .swiper-button-prev{background-size:25px;height:75px;width:75px;opacity:0.5;display:block;-webkit-transition:all .3s;-o-transition:all .3s;transition:all .3s;outline:0}.gbt_18_mt_lookbook .swiper-button-next.swiper-button-disabled,.gbt_18_mt_lookbook .swiper-button-prev.swiper-button-disabled{opacity:0}.gbt_18_mt_lookbook .swiper-button-prev{background-image:url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23000000'%2F%3E%3C%2Fsvg%3E");left:0}.gbt_18_mt_lookbook .swiper-button-next{background-image:url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23000000'%2F%3E%3C%2Fsvg%3E");right:0}.gbt_18_mt_lookbook .gbt_18_mt_lookbook_product_infos{position:absolute;padding:45px 70px;bottom:0px;left:0px;z-index:200;pointer-events:none;width:100%}.gbt_18_mt_lookbook .gbt_18_mt_lookbook_product_overlay{position:absolute;top:0;bottom:0;left:0;right:0;width:100%;background:-moz-linear-gradient(bottom, black 0%, rgba(0, 0, 0, 0) 50%);background:-webkit-gradient(linear, left bottom, left top, color-stop(0%, black), color-stop(50%, rgba(0, 0, 0, 0)));background:-webkit-linear-gradient(bottom, black 0%, rgba(0, 0, 0, 0) 50%);background:-o-linear-gradient(bottom, black 0%, rgba(0, 0, 0, 0) 50%);background:-ms-linear-gradient(bottom, black 0%, rgba(0, 0, 0, 0) 50%);background:-webkit-gradient(linear, left bottom, left top, from(black), color-stop(50%, rgba(0, 0, 0, 0)));background:linear-gradient(to top, black 0%, rgba(0, 0, 0, 0) 50%);height:100%;z-index:1;opacity:0;-webkit-transition:.3s;-o-transition:.3s;transition:.3s;display:block}.gbt_18_mt_lookbook .gbt_18_mt_lookbook_product_overlay:hover{opacity:.5}
+.gbt_18_mt_lookbook {
+  visibility: hidden;
+  position: relative; }
+  .gbt_18_mt_lookbook .swiper-slide.first {
+    text-align: center; }
+    .gbt_18_mt_lookbook .swiper-slide.first .gbt_18_mt_lookbook_first_slide {
+      position: relative;
+      top: 50%;
+      margin-top: -10px;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%);
+      max-width: 100%;
+      padding: 0 50px;
+      margin: 0 auto; }
+      .gbt_18_mt_lookbook .swiper-slide.first .gbt_18_mt_lookbook_first_slide h2 {
+        padding: 0 0 30px 0; }
+  .gbt_18_mt_lookbook .swiper-slide {
+    background-size: cover;
+    background-position: center;
+    position: relative; }
+  .gbt_18_mt_lookbook .gbt_18_mt_lookbook_product {
+    overflow: hidden;
+    position: relative;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+    -webkit-transition: .5s ease;
+    -o-transition: .5s ease;
+    transition: .5s ease; }
+    .gbt_18_mt_lookbook .gbt_18_mt_lookbook_product .gbt_18_mt_lookbook_product_wrapper {
+      height: 100%;
+      background-size: cover;
+      background-position: center;
+      overflow: hidden;
+      display: block;
+      -webkit-transition: -webkit-transform .5s ease;
+      transition: -webkit-transform .5s ease;
+      -o-transition: transform .5s ease;
+      transition: transform .5s ease;
+      transition: transform .5s ease, -webkit-transform .5s ease;
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+      -webkit-transform-style: preserve-3d;
+      transform-style: preserve-3d; }
+    .gbt_18_mt_lookbook .gbt_18_mt_lookbook_product:hover {
+      -webkit-box-shadow: 0px 0px 80px 0px rgba(0, 0, 0, 0.3);
+      box-shadow: 0px 0px 80px 0px rgba(0, 0, 0, 0.3);
+      z-index: 1; }
+      .gbt_18_mt_lookbook .gbt_18_mt_lookbook_product:hover .gbt_18_mt_lookbook_product_wrapper {
+        -webkit-transform: perspective(1000px) translate3d(0, 0, 50px);
+        -moz-transform: perspective(1000px) translate3d(0, 0, 50px) rotate(0.01deg);
+        transform: perspective(1000px) translate3d(0, 0, 50px); }
+  .gbt_18_mt_lookbook .swiper-button-prev,
+  .gbt_18_mt_lookbook .swiper-button-next {
+    background-size: 25px;
+    height: 75px;
+    width: 75px;
+    opacity: 0.5;
+    display: block;
+    -webkit-transition: all .3s;
+    -o-transition: all .3s;
+    transition: all .3s;
+    outline: 0; }
+    .gbt_18_mt_lookbook .swiper-button-prev.swiper-button-disabled,
+    .gbt_18_mt_lookbook .swiper-button-next.swiper-button-disabled {
+      opacity: 0; }
+  .gbt_18_mt_lookbook .swiper-button-prev {
+    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23000000'%2F%3E%3C%2Fsvg%3E");
+    left: 0; }
+  .gbt_18_mt_lookbook .swiper-button-next {
+    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23000000'%2F%3E%3C%2Fsvg%3E");
+    right: 0; }
+  .gbt_18_mt_lookbook .gbt_18_mt_lookbook_product_infos {
+    position: absolute;
+    padding: 45px 70px;
+    bottom: 0px;
+    left: 0px;
+    z-index: 200;
+    pointer-events: none;
+    width: 100%; }
+  .gbt_18_mt_lookbook .gbt_18_mt_lookbook_product_overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    background: -moz-linear-gradient(bottom, black 0%, rgba(0, 0, 0, 0) 50%);
+    /* FF3.6+ */
+    background: -webkit-gradient(linear, left bottom, left top, color-stop(0%, black), color-stop(50%, rgba(0, 0, 0, 0)));
+    /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(bottom, black 0%, rgba(0, 0, 0, 0) 50%);
+    /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(bottom, black 0%, rgba(0, 0, 0, 0) 50%);
+    /* Opera 11.10+ */
+    background: -ms-linear-gradient(bottom, black 0%, rgba(0, 0, 0, 0) 50%);
+    /* IE10+ */
+    background: -webkit-gradient(linear, left bottom, left top, from(black), color-stop(50%, rgba(0, 0, 0, 0)));
+    background: linear-gradient(to top, black 0%, rgba(0, 0, 0, 0) 50%);
+    /* W3C */
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s;
+    display: block; }
+    .gbt_18_mt_lookbook .gbt_18_mt_lookbook_product_overlay:hover {
+      opacity: .5; }
