--- a/includes/social-sharing/assets/css/social-sharing.css
+++ b/includes/social-sharing/assets/css/social-sharing.css
@@ -16,6 +16,14 @@
   font-weight: 700;
   text-transform: uppercase;
   position: relative; }
+  .trigger-share-list:before {
+    -webkit-transition: content .3s ease;
+    -o-transition: content .3s ease;
+    transition: content .3s ease;
+    position: relative;
+    top: 4px; }
+  .trigger-share-list:hover:before {
+    opacity: .5; }
 
 .box-share-list {
   position: absolute;
