--- a/includes/social-sharing/assets/scss/social-sharing.scss
+++ b/includes/social-sharing/assets/scss/social-sharing.scss
@@ -23,17 +23,20 @@
     font-weight: 700;
     text-transform: uppercase;
     position: relative;
+    opacity: 1;
+    transition: all .2s ease;
 
     &:before
     {
-        transition: content .3s ease;
+        transition: all .2s ease;
         position: relative;
+        margin-right: 2px;
         top: 4px;
     }
 
     &:hover:before
     {
-        opacity: .5;
+        opacity: .55;
     }
 }
 
