--- a/includes/shortcodes/assets/css/products-slider.css
+++ b/includes/shortcodes/assets/css/products-slider.css
@@ -1,5 +1,5 @@
 .shortcode_products_slider {
-  margin: 0 -15px; }
+  margin: 0 -15px 2.5rem; }
 
 .shortcode_products_slider .product_after_shop_loop .price del {
   color: inherit;
