--- a/includes/shortcodes/assets/scss/from-the-blog-list.scss
+++ b/includes/shortcodes/assets/scss/from-the-blog-list.scss
@@ -1,4 +1,4 @@
-.from-the-blog-list-wrapper
+.blog-list-wrapper
 {
 	display: block;
 	position: relative;
@@ -111,7 +111,7 @@
 /* min-width 641px, medium screens */
 @media only screen and (min-width: 40.063em) {
 
-	.from-the-blog-list-wrapper
+	.blog-list-wrapper
 	{
 		.blog-list-item
 		{
