--- a/includes/shortcodes/assets/scss/products-slider.scss
+++ b/includes/shortcodes/assets/scss/products-slider.scss
@@ -1,6 +1,6 @@
 .shortcode_products_slider
 {
-	margin:0 -15px;
+	margin:0 -15px 2.5rem;
 }
 
 .shortcode_products_slider  .product_after_shop_loop .price del
