--- a/includes/social-media/assets/css/social-media.css
+++ b/includes/social-media/assets/css/social-media.css
@@ -1,18 +1,18 @@
 .site-social-icons-shortcode {
   vertical-align: middle;
   clear: both;
-  margin: 5px -15px 15px -15px;
+  margin: 5px -15px 2.5rem -15px;
   display: block; }
   .site-social-icons-shortcode ul.mt_social_icons_list {
     list-style: none;
     margin: 0;
     padding: 0;
     line-height: 1em; }
-    .site-social-icons-shortcode ul.mt_social_icons_list.left {
+    .site-social-icons-shortcode ul.mt_social_icons_list.align-left {
       text-align: left; }
-    .site-social-icons-shortcode ul.mt_social_icons_list.center {
+    .site-social-icons-shortcode ul.mt_social_icons_list.align-center {
       text-align: center; }
-    .site-social-icons-shortcode ul.mt_social_icons_list.right {
+    .site-social-icons-shortcode ul.mt_social_icons_list.align-right {
       text-align: right; }
     .site-social-icons-shortcode ul.mt_social_icons_list li.mt_social_icon {
       padding: 5px 12px;
