--- a/includes/social-media/assets/scss/social-media.scss
+++ b/includes/social-media/assets/scss/social-media.scss
@@ -11,7 +11,7 @@
 		margin: 0;
 		padding: 0;
 	    line-height: 1em;
-		
+
 		&.align-left
 		{
 			text-align:left;
@@ -31,6 +31,11 @@
 		{
 			padding: 5px 12px;
 			display: inline-block;
+			vertical-align: middle;
+
+			img {
+				vertical-align: top;
+			}
 		}
 	}
 }
