--- a/includes/gbt-blocks/lookbook/assets/scss/editor.scss
+++ b/includes/gbt-blocks/lookbook/assets/scss/editor.scss
@@ -19,7 +19,7 @@
 		    	font-size: 56px;
 		    	color: #fff;
 		    	margin-bottom: 20px;
-		    }	
+		    }
 
 		    .lookbook-subtitle
 		    {
@@ -38,7 +38,7 @@
     }
 }
 
-.editor-block-list__block[data-type="getbowtied/mt-lookbook"] {
+.wp-block[data-type="getbowtied/mt-lookbook"] {
 
 	&.is-selected,
 	&.is-hovered,
