--- a/includes/gbt-blocks/lookbook/assets/css/style.css
+++ b/includes/gbt-blocks/lookbook/assets/css/style.css
@@ -57,6 +57,8 @@
   .gbt_18_mt_lookbook .swiper-button-prev,
   .gbt_18_mt_lookbook .swiper-button-next {
     background-size: 25px;
+    background-repeat: no-repeat;
+    background-position: center;
     height: 75px;
     width: 75px;
     opacity: 0.5;
@@ -65,6 +67,9 @@
     -o-transition: all .3s;
     transition: all .3s;
     outline: 0; }
+    .gbt_18_mt_lookbook .swiper-button-prev:after,
+    .gbt_18_mt_lookbook .swiper-button-next:after {
+      content: none; }
     .gbt_18_mt_lookbook .swiper-button-prev.swiper-button-disabled,
     .gbt_18_mt_lookbook .swiper-button-next.swiper-button-disabled {
       opacity: 0; }
