--- a/includes/shortcodes/assets/css/from-the-blog-slider.css
+++ b/includes/shortcodes/assets/css/from-the-blog-slider.css
@@ -1,101 +1,132 @@
-.from-the-blog-wrapper {
-  margin: 0 0 2.5rem 0; }
-  .from-the-blog-wrapper .from_the_blog_item {
-    padding: 0 15px; }
-    .from-the-blog-wrapper .from_the_blog_item h3 {
-      text-align: center;
-      font-size: 1.457em;
-      line-height: 1.304em;
-      margin: 0 0 12px; }
-    .from-the-blog-wrapper .from_the_blog_item .post_header_date {
-      text-align: center;
-      font-size: 0.875em; }
-    .from-the-blog-wrapper .from_the_blog_item.gallery {
-      margin: 0 !important; }
-    .from-the-blog-wrapper .from_the_blog_item:hover .from_the_blog_overlay {
-      background: rgba(0, 0, 0, 0.6); }
-    .from-the-blog-wrapper .from_the_blog_item:hover .from_the_blog_img {
-      -webkit-transform: translateZ(0) scale(1.1, 1.1);
-      transform: translateZ(0) scale(1.1, 1.1);
-      -ms-transform: none; }
-  .from-the-blog-wrapper .from_the_blog_overlay {
-    display: block;
-    background: rgba(0, 0, 0, 0);
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 2;
-    -webkit-transition: all .3s ease;
-    -o-transition: all .3s ease;
-    transition: all .3s ease; }
-  .from-the-blog-wrapper .from_the_blog_img_link {
-    display: block;
-    overflow: hidden;
-    position: relative;
-    height: 245px;
-    width: 100%;
-    margin-bottom: 18px;
-    -webkit-mask-image: -webkit-radial-gradient(white, black); }
-  .from-the-blog-wrapper .from_the_blog_img {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-position: center center;
-    background-size: cover;
-    -webkit-transition: all 1s ease;
-    -o-transition: all 1s ease;
-    transition: all 1s ease; }
-  .from-the-blog-wrapper .grabbing .from_the_blog_item:hover .from_the_blog_img {
-    -webkit-transform: none;
-    -ms-transform: none;
-    transform: none; }
-  .from-the-blog-wrapper .with_thumb_icon {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    display: block;
-    background: #314381;
-    top: 0;
-    left: 0;
-    text-align: center;
-    color: #fff;
-    line-height: 50px;
-    z-index: 3; }
-  .from-the-blog-wrapper .no_thumb_icon {
-    line-height: 245px;
-    text-align: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    color: #fff;
-    z-index: 3; }
-  .from-the-blog-wrapper .no_thumb_icon:before,
-  .from-the-blog-wrapper .with_thumb_icon:before {
+.from-the-blog-wrapper .from_the_blog_item h3 {
+  text-align: center;
+  font-size: 1.457em;
+  line-height: 1.304em;
+  margin: 0 0 12px; }
+
+.from-the-blog-wrapper .from_the_blog_item .post_header_date {
+  text-align: center;
+  font-size: 0.875em; }
+
+.from-the-blog-wrapper .from_the_blog_item.gallery {
+  margin: 0 !important; }
+
+.from-the-blog-wrapper .from_the_blog_item:hover .from_the_blog_overlay {
+  background: rgba(0, 0, 0, 0.6); }
+
+.from-the-blog-wrapper .from_the_blog_item:hover .from_the_blog_img {
+  -webkit-transform: translateZ(0) scale(1.1, 1.1);
+  transform: translateZ(0) scale(1.1, 1.1);
+  -ms-transform: none; }
+
+.from-the-blog-wrapper .from_the_blog_overlay {
+  display: block;
+  background: rgba(0, 0, 0, 0);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  -webkit-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  transition: all .3s ease; }
+
+.from-the-blog-wrapper .from_the_blog_img_link {
+  display: block;
+  overflow: hidden;
+  position: relative;
+  height: 245px;
+  width: 100%;
+  margin-bottom: 18px;
+  -webkit-mask-image: -webkit-radial-gradient(white, black); }
+
+.from-the-blog-wrapper .from_the_blog_img {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-position: center center;
+  background-size: cover;
+  -webkit-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease; }
+
+.from-the-blog-wrapper .grabbing .from_the_blog_item:hover .from_the_blog_img {
+  -webkit-transform: none;
+  -ms-transform: none;
+  transform: none; }
+
+.from-the-blog-wrapper .with_thumb_icon {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  display: block;
+  background: #314381;
+  top: 0;
+  left: 0;
+  text-align: center;
+  color: #fff;
+  line-height: 50px;
+  z-index: 3; }
+
+.from-the-blog-wrapper .no_thumb_icon {
+  line-height: 245px;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  z-index: 3; }
+
+.from-the-blog-wrapper .no_thumb_icon:before,
+.from-the-blog-wrapper .with_thumb_icon:before {
+  display: inline-block;
+  vertical-align: middle;
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  z-index: 3; }
+
+.from-the-blog-wrapper .with_thumb_icon:before {
+  font-size: 18px; }
+
+.from-the-blog-wrapper .no_thumb_icon:before {
+  font-size: 78px; }
+
+.from-the-blog-wrapper .from_the_blog_item.standard .with_thumb_icon {
+  display: none; }
+
+.from-the-blog-wrapper .no_thumb .from_the_blog_img {
+  line-height: 245px; }
+
+.from-the-blog-wrapper .from_the_blog_noimg {
+  background: #f5f5f5;
+  height: 245px;
+  width: 100%;
+  display: block; }
+
+.from-the-blog-wrapper .swiper-pagination {
+  padding: 0 0 50px;
+  position: relative;
+  width: 100% !important; }
+  .from-the-blog-wrapper .swiper-pagination span.swiper-pagination-bullet {
     display: inline-block;
-    vertical-align: middle;
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    z-index: 3; }
-  .from-the-blog-wrapper .with_thumb_icon:before {
-    font-size: 18px; }
-  .from-the-blog-wrapper .no_thumb_icon:before {
-    font-size: 78px; }
-  .from-the-blog-wrapper .from_the_blog_item.standard .with_thumb_icon {
-    display: none; }
-  .from-the-blog-wrapper .no_thumb .from_the_blog_img {
-    line-height: 245px; }
-  .from-the-blog-wrapper .from_the_blog_noimg {
-    background: #f5f5f5;
-    height: 245px;
-    width: 100%;
-    display: block; }
+    width: 8px;
+    height: 8px;
+    margin: 10px 3px;
+    opacity: 0.99;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    background: #d4d4d4; }
+    .from-the-blog-wrapper .swiper-pagination span.swiper-pagination-bullet:only-child {
+      display: none; }
+    .from-the-blog-wrapper .swiper-pagination span.swiper-pagination-bullet.swiper-pagination-bullet-active {
+      background: #a9a9ab; }
 
 .boxed-row .wpb_wrapper .from-the-blog-wrapper {
   margin: 0px -30px 0px; }
